I was able to resolve the footer issue by removing some overflow functionality in the using overflow scroll on the body with an overflow hidden in the x direction. I adjusted the container scss from 100vh to 100%. I set the footer scss to be statically positioned at the bottom of the screen. I removed the overflow scroll within the App component as well

--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -9,7 +9,7 @@ nav {
   background: #fff;
   color: #000;
   & a,
-  & ul a {
+  & div a {
     text-decoration: none;
     color: inherit;
     font-weight: 800;
@@ -20,7 +20,7 @@ nav {
       cursor: pointer;
     }
   }
-  ul {
+  div {
     display: flex;
     gap: 1.5vw;
     margin-right: 1rem;
